# wndo

./: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  REFERENCE  TODO  TUTORIAL  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  install.html  make-deb  make-release  new-version  readme.html  reference.html  tutorial.html
bash_completion/: Makefile.am  Makefile.in  wndo
debian/: Makefile.am  Makefile.in  changelog  control  rules
docgen/: Makefile.am  Makefile.in  wndo
lib/: Makefile.am  Makefile.in  __init__.py
resources/: wndo.xcf
test/: Makefile.am  Makefile.in  setup.example  wndo
wndo-ctrl/: Makefile.am  Makefile.in  wndo-ctrl.c
wndo-pick/: Makefile.am  Makefile.in  wndo-pick.c
wndo-spy/: Makefile.am  Makefile.in  wndo-spy.c
wndo.d/: Makefile.am  Makefile.in  core.cmdocore  events.cmdo  install.cmdodoc  osd.cmdo  readme.cmdodoc  run.cmdo  setup.cmdo  tutorial.cmdodoc  wallpaper.cmdo  window.cmdo  workspace.cmdo
